# sixi-web

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yaml  main-ci.yml
examples/: app.py
examples/templates/: index.html
sixi_web/: __init__.py  api.py  app.py  middleware.py  orm.py  response.py
tests/: conftest.py  test_orm.py  test_sixi_web.py
tests/templates/: index.html
