[tool.poetry]
name = "sixi-web"
version = "0.1.4"
description = "A simple web framework built for learning purpose."
authors = ["Kada Liao <kadaliao@gmail.com>"]
keywords = ["web", "learning"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kadaliao/sixi-web"
repository = "https://github.com/kadaliao/sixi-web"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
WebOb = "^1.8.7"
parse = "^1.19.0"
requests = "^2.26.0"
requests-wsgi-adapter = "^0.4.1"
Jinja2 = "^3.0.1"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
watchdog = "^2.1.5"
gunicorn = "^20.1.0"
pytest-cov = "^2.12.1"
black = "^21.8b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
bandit = "^1.7.0"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 179
