[project]
name = "sixi-web"
version = "0.1.4"
description = "A simple web framework built for learning purpose."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Kada Liao", email = "kadaliao@gmail.com" }
]
keywords = ["web", "learning"]

dependencies = [
  "WebOb>=1.8.7,<2.0.0",
  "parse>=1.19.0,<2.0.0",
  "requests>=2.26.0,<3.0.0",
  "requests-wsgi-adapter>=0.4.1,<0.5.0",
  "Jinja2>=3.0.1,<4.0.0",
  "whitenoise>=5.3.0,<6.0.0",
]

[project.urls]
Homepage = "https://github.com/kadaliao/sixi-web"
Repository = "https://github.com/kadaliao/sixi-web"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sixi_web"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0.0",
  "watchdog>=2.1.5,<3.0.0",
  "gunicorn>=20.1.0,<21.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "black>=24.8.0,<25.0.0",
  "flake8>=7.0.0,<8.0.0",
  "isort>=5.9.3,<6.0.0",
  "bandit>=1.7.0,<2.0.0",
  "safety>=1.10.3,<2.0.0",
]

[tool.black]
line-length = 179
